Fixed bug #37505 (touch() truncates large files).